--- a/styles.css
+++ b/styles.css
@@ -368,6 +368,16 @@ body {
   margin-right: 8px;
 }
 
+.contact-us-message {
+  width: 400px; /* Adjust the width as needed */
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.6); /* Semi-transparent background */
+  border-radius: 10px; /* Rounded corners */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+  text-align: center; /* Center the text inside the container */
+  margin: 20px auto; /* Center the container horizontally */
+  margin-top: -5%;
+}
 
 
 
